--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -153,29 +153,42 @@
 				</ul>
 
 			<li>Area(s) of Interest</li>
-
-Specify which focus areas from the workshop’s call for position papers your submission aligns with (e.g., network protocols, distributed systems, cloud/edge computing, security and privacy, etc.).
-If applicable, highlight any additional related areas that the authors believe are relevant to immersive computing challenges.
+				<ul>
+				<li>Specify which focus areas from the workshop’s call for position papers your submission aligns with 
+					(e.g., network protocols, distributed systems, cloud/edge computing, security and privacy, etc.).</li>
+				<li>If applicable, highlight any additional related areas that the authors believe are relevant to networking and 
+					systems challenges immersive computing.</li>
+				</ul>
 
 			<li>Prior Work and Expertise</li>
-
-Briefly describe the author(s)’ relevant experience and prior work in the areas covered by the workshop. This could include prior research, developed systems, methodologies, or contributions to related fields.
-Mention any datasets, tools, frameworks, or testbeds the author(s) have worked on or developed that could be useful to the workshop’s discussions.
+				<ul>
+				<li>Briefly describe the author(s)’ relevant experience and prior work in the areas covered by the workshop. 
+					This could include prior research, developed systems, methodologies, or contributions to related fields.</li>
+				<li>Mention any datasets, tools, frameworks, or testbeds the author(s) have worked on or developed that could 
+					be useful to the workshop’s discussions.</li>
+				</ul>
 
 			<li>Potential Contributions to the Workshop</li>
-
-Outline what you or your team can bring to the workshop discussions, particularly in relation to immersive computing’s networking and systems challenges.
-Describe any unique insights, experiences, or resources (e.g., methodologies, datasets, platforms) that you believe will contribute to advancing the workshop's goals.
+				<ul>
+				<li>Outline what you or your team can bring to the workshop discussions, particularly in relation to immersive 
+				computing’s networking and systems challenges.</li>
+				<li>Describe any unique insights, experiences, or resources (e.g., methodologies, datasets, platforms) that you 
+				believe will contribute to advancing the workshop's goals.</li>
+				</ul>
 
 			<li>Vision for the Future</li>
-
-Discuss the challenges you see in networking and systems for immersive computing.
-Share any ideas or recommendations you have for future research directions or collaborative efforts in this field.
+				<ul>
+				<li>Discuss the challenges you see in networking and systems for immersive computing.</li>
+				<li>Share any ideas or recommendations you have for future research directions or collaborative efforts in this 
+					field.</li>
+				</ul>
 
 			<li>Expected Outcomes</li>
-
-What do you hope to gain from participating in the workshop?
-How do you envision your contributions impacting the broader community of researchers and practitioners focused on immersive computing?
+				<ul>
+				<li>What do you hope to gain from participating in the workshop?</li>
+				<li>How do you envision your contributions impacting the broader community of researchers and practitioners focused 
+					on immersive computing?</li>
+				</ul>
 				</ol>
 		
 
