--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -154,7 +154,7 @@
 
 			<li>Area(s) of Interest</li>
 				<ul>
-				<li>Specify which focus areas from the workshop’s call for position papers your submission aligns with 
+				<li>Specify which focus areas from the workshop’s call for position papers the author(s)’ submission aligns with 
 					(e.g., network protocols, distributed systems, cloud/edge computing, security and privacy, etc.).</li>
 				<li>If applicable, highlight any additional related areas that the authors believe are relevant to networking and 
 					systems challenges immersive computing.</li>
@@ -170,10 +170,10 @@
 
 			<li>Potential Contributions to the Workshop</li>
 				<ul>
-				<li>Outline what you or your team can bring to the workshop discussions, particularly in relation to immersive 
-				computing’s networking and systems challenges.</li>
-				<li>Describe any unique insights, experiences, or resources (e.g., methodologies, datasets, platforms) that you 
-				believe will contribute to advancing the workshop's goals.</li>
+				<li>Outline what you or your team can bring to the workshop discussions, particularly in relation to networking and 
+					systems challenges of immersive computing.</li>
+				<li>Describe any unique insights, experiences, or resources (e.g., methodologies, datasets, and platforms) that you 
+					believe will contribute to advancing the workshop's goals.</li>
 				</ul>
 
 			<li>Vision for the Future</li>
