--- a/nsf/pages/call.html
+++ b/nsf/pages/call.html
@@ -82,7 +82,18 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2> Call for Position Papers </h2>
-                    
+
+		<p>Immersive computing refers to a class of technologies that blend the digital and physical worlds to create deeply engaging, 
+			interactive environments, often through extended reality (XR) technologies such as augmented reality (AR), virtual 
+			reality (VR), and mixed reality (MR). XR systems aim to transform how we interact with digital content, providing 
+			experiences that mimic or enhance reality. Immersive applications frequently rely on multi-camera and multi-view 
+			configurations to capture detailed, real-world scenes and enable real-time 3D rendering. Emerging techniques such as 
+			neural radiance fields (NeRF) and 3D Gaussian splatting (3DGS) are pushing the frontiers of immersive content generation, 
+			allowing for highly realistic, efficient reconstruction and rendering of complex environments. However, these technological 
+			advancements introduce significant networking and systems challenges, including managing large data streams, ensuring 
+			low-latency interactions, and supporting real-time, scalable delivery of immersive experiences—challenges this workshop 
+			aims to explore and address.</p>
+		
                     <p>We seek to foster cross-disciplinary dialogue and drive innovation in building the next generation of network infrastructures 
 			    and systems that can meet the demands of immersive applications. Submitted position papers will be used solely for the 
 			    purpose of choosing participants who can meaningfully contribute to the workshop's discussions and objectives. Selected 
@@ -94,7 +105,7 @@
 			<p>Position papers should address one or more of the following focus topics:</p>
 			<ul>
 
-			<li><b>Intelligent Network Design</b>: AI and ML offer new ways to optimize network performance for immersive applications. 
+			<li><b>Intelligent Network Design</b>: AI and ML offer new ways to optimize network performance for XR applications. 
 				We encourage submissions exploring how AI/ML can enable intelligent, self-optimizing networks that adapt dynamically 
 				and efficiently allocate resources for immersive experiences.</li>
 
@@ -107,10 +118,10 @@
 				heterogeneous networks for seamless connectivity.</li>
 
 			<li><b>Performance Optimization for Immersive Systems</b>: Efficient resource management, low latency, and energy optimization 
-				are key for immersive systems. We invite papers on resource allocation strategies, dynamic scaling, and techniques to 
+				are key for XR systems. We invite papers on resource allocation strategies, dynamic scaling, and techniques to 
 				minimize power consumption while maintaining high performance.</li>
 
-			<li><b>Network Protocols for Immersive Applications</b>: Immersive computing imposes unique requirements on network protocols, 
+			<li><b>Network Protocols for XR Applications</b>: Immersive computing imposes unique requirements on network protocols, 
 				such as ultra-low latency and high bandwidth. We seek contributions on novel communication protocols, data compression 
 				techniques, and transport layer optimizations tailored for immersive environments.</li>
 
@@ -122,7 +133,7 @@
 				is increasingly complex. We invite papers on new methodologies, tools, and metrics for assessing latency, bandwidth, 
 				quality of service, and user experience in immersive environments.</li>
 
-			<li><b>Tools and Testbeds for Immersive Systems</b>: Specialized tools and testbeds are necessary for immersive systems 
+			<li><b>Tools and Testbeds for Immersive Systems</b>: Specialized tools and testbeds are necessary for XR systems 
 				research. We welcome contributions that share experiences in designing and deploying testbeds, simulation environments, 
 				and benchmarking tools with a focus on scalability, reproducibility, and practical challenges.</li>
 
