--- a/nsf/pages/committees.html
+++ b/nsf/pages/committees.html
@@ -91,7 +91,7 @@
 	
                     <h2> Steering Committee </h2>
 			<ul>
-                    	<li>Yingying (Jennifer) Chen, Rutgers Universit</li>
+                    	<li>Yingying (Jennifer) Chen, Rutgers University</li>
 			<li>Charlie Hu, Purdue University</li>
 			<li>Klara Nahrstedt, University of Illinois Urbana-Champaign (Chair)</li>
 			<li>Anthony Rowe, Carnegie Mellon University</li>
